Fixed carousel images path

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -46,31 +46,31 @@ const features = [
   <article class="container-cards">
       <div class="cards1">
           <div class="cards-item">
-              <img src="/src/assets/carousel/c1.webp" loading="lazy" alt="Autumn">
+              <img src="/images/c1.webp" loading="lazy" alt="talenland24">
           </div>
           <div class="cards-item">
-              <img src="/src/assets/carousel/c2.webp" loading="lazy" alt="Cliffs">
+              <img src="/images/c2.webp" loading="lazy" alt="itcancun">
           </div>
           <div class="cards-item">
-              <img src="/src/assets/carousel/c3.webp" loading="lazy" alt="Desert">
+              <img src="/images/c3.webp" loading="lazy" alt="tajamar">
           </div>
           <div class="cards-item">
-              <img src="/src/assets/carousel/c4.webp" loading="lazy" alt="Japan">
+              <img src="/images/c4.webp" loading="lazy" alt="jon maddog">
           </div>
           <div class="cards-item">
-            <img src="/src/assets/carousel/c5.webp" loading="lazy" alt="Beach">
+            <img src="/images/c5.webp" loading="lazy" alt="genius arena 2024">
           </div>
           <div class="cards-item">
-            <img src="/src/assets/carousel/c6.webp" loading="lazy" alt="Beach">
+            <img src="/images/c6.webp" loading="lazy" alt="birthday">
           </div>
           <div class="cards-item">
-            <img src="/src/assets/carousel/c7.webp" loading="lazy" alt="Beach">
+            <img src="/images/c7.webp" loading="lazy" alt="genius arena 2024">
           </div>
           <div class="cards-item">
-            <img src="/src/assets/carousel/c8.webp" loading="lazy" alt="Beach">
+            <img src="/images/c8.webp" loading="lazy" alt="flutter app">
           </div>
           <div class="cards-item">
-            <img src="/src/assets/carousel/c9.webp" loading="lazy" alt="Beach">
+            <img src="/images/c9.webp" loading="lazy" alt="gatovsky">
           </div>
       </div>
   </article>
