--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -25,9 +25,12 @@ import { Icon } from "astro-icon/components";
   <div>
     <h1
       class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Inge Gatovsky - Cloud Engineer
+      Inge Gatovsky
     </h1>
-    <p class="text-justify text-lg mt-4 text-slate-600 max-w-xl">
+    <h2 class="text-4xl lg:text-5xl xl:text-6xl font-bold lg:tracking-tight xl:tracking-tighter">
+      Cloud Engineer
+    </h2>
+    <p class="text-justify text-xl mt-4 text-slate-600 max-w-xl">
       It´s me, Inge Gatovsky, a Cloud Engineer with a passion for technology and
       innovation. I´m a big fan of the cloud and all the possibilities it offers.
       Pythonist, Linux and Docker. <br/> I´m always looking for new
