--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -38,8 +38,7 @@ import { Icon } from "astro-icon/components";
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
-        href="#"
-        href="mailto:"
+        href="mailto:&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#111;&#64;&#104;&#104;&#97;&#114;&#105;&#101;&#116;&#97;&#46;&#108;&#97;&#116;"
         target="_blank"
         class="flex gap-1 items-center justify-center"
         rel="noopener">
