--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -36,18 +36,18 @@ const menuitems = [
 ---
 
 <Container>
-  <header class="font-mplus flex flex-col lg:flex-row justify-between items-center">
+  <header class="flex-col text-xl md:flex md:w-full lg:flex-row content-start justify-between place-content-start items-start my-5">
     <Astronav>
-      <div class="flex w-full lg:w-auto items-center justify-between">
+      <div class="flex w-full lg:w-fit justify-between">
         <a href="/">
           <img
           src="/images/gatovsky.svg"
           alt="Inge Gatovsky"
-          class="w-10 h-10 lg:w-12 lg:h-12"
+          class="w-14 h-14 lg:w-16 lg:h-16"
         />
         </a>
         <div class="block lg:hidden">
-          <MenuIcon class="w-4 h-4 text-gray-800" />
+          <MenuIcon class="w-10 h-10 text-gray-800" />
         </div>
       </div>
       <MenuItems class="text-md md:text-xl hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
