--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -10,7 +10,7 @@ import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
 
 const menuitems = [
   {
-    title: "Gallery",
+    title: "Gatovsky",
     path: "#",
     children: [
       { title: "Projects", path: "https://www.hharieta.lat/works", target: "_blank" },
