--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -1,49 +1,49 @@
 ---
 // @ts-ignore
-import { Icon } from "astro-icon/components";
+// import { Icon } from "astro-icon/components";
 
-const features = [
-  {
-    title: "Bring Your Own Framework",
-    description:
-      "Build your site using React, Svelte, Vue, Preact, web components, or just plain ol' HTML + JavaScript.",
-    icon: "bx:bxs-briefcase",
-  },
-  {
-    title: "100% Static HTML, No JS",
-    description:
-      "Astro renders your entire page to static HTML, removing all JavaScript from your final build by default.",
-    icon: "bx:bxs-window-alt",
-  },
-  {
-    title: "On-Demand Components",
-    description:
-      "Need some JS? Astro can automatically hydrate interactive components when they become visible on the page.  ",
-    icon: "bx:bxs-data",
-  },
-  {
-    title: "Broad Integration",
-    description:
-      "Astro supports TypeScript, Scoped CSS, CSS Modules, Sass, Tailwind, Markdown, MDX, and any other npm packages.",
-    icon: "bx:bxs-bot",
-  },
-  {
-    title: "SEO Enabled",
-    description:
-      "Automatic sitemaps, RSS feeds, pagination and collections take the pain out of SEO and syndication. It just works!",
-    icon: "bx:bxs-file-find",
-  },
-  {
-    title: "Community",
-    description:
-      "Astro is an open source project powered by hundreds of contributors making thousands of individual contributions.",
-    icon: "bx:bxs-user",
-  },
-];
+// const features = [
+//   {
+//     title: "Bring Your Own Framework",
+//     description:
+//       "Build your site using React, Svelte, Vue, Preact, web components, or just plain ol' HTML + JavaScript.",
+//     icon: "bx:bxs-briefcase",
+//   },
+//   {
+//     title: "100% Static HTML, No JS",
+//     description:
+//       "Astro renders your entire page to static HTML, removing all JavaScript from your final build by default.",
+//     icon: "bx:bxs-window-alt",
+//   },
+//   {
+//     title: "On-Demand Components",
+//     description:
+//       "Need some JS? Astro can automatically hydrate interactive components when they become visible on the page.  ",
+//     icon: "bx:bxs-data",
+//   },
+//   {
+//     title: "Broad Integration",
+//     description:
+//       "Astro supports TypeScript, Scoped CSS, CSS Modules, Sass, Tailwind, Markdown, MDX, and any other npm packages.",
+//     icon: "bx:bxs-bot",
+//   },
+//   {
+//     title: "SEO Enabled",
+//     description:
+//       "Automatic sitemaps, RSS feeds, pagination and collections take the pain out of SEO and syndication. It just works!",
+//     icon: "bx:bxs-file-find",
+//   },
+//   {
+//     title: "Community",
+//     description:
+//       "Astro is an open source project powered by hundreds of contributors making thousands of individual contributions.",
+//     icon: "bx:bxs-user",
+//   },
+// ];
 ---
 
 <section class="my-5">
-  <div class="mt-1 md:mt-0">
+  <div class="flex flex-col content-center items-center sm:items-left mt-1 md:mt-0">
     <h2 class="text-4xl md:text-xl lg:text-5xl font-bold lg:tracking-tight">
       Inge Gatovsky
     </h2>
@@ -51,9 +51,9 @@ const features = [
       "the best breaking production"
     </h3>
     <p class="text-xl text-justify mt-4 text-slate-600">
-      Do you want to know more about me? <br/>
-      I´m a Cloud Engineer with a passion for technology and innovation. <br/>
-      Therefore, I write code 💻 and cheap love poems 🩷.
+      Do you want to know more about me?
+      I´m a Cloud Engineer with a passion for data engineering & ML.
+      Also, I write cheap love poems 🩷.
     </p>
   </div>
   
