--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -7,7 +7,7 @@ import { Icon } from "astro-icon/components";
 
 <main
   class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
-  <div class="py-6 md:order-1 hidden md:block rounded-ms">
+  <article class="py-6 md:order-1 hidden md:block rounded-ms">
     <Picture
       src={heroImage}
       alt="Inge Gatovsky"
@@ -21,21 +21,23 @@ import { Icon } from "astro-icon/components";
         overflow: "hidden",
        }}
     />
-  </div>
-  <div>
-    <h1
-      class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Inge Gatovsky
-    </h1>
-    <h2 class="text-4xl lg:text-5xl xl:text-6xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Cloud Engineer
-    </h2>
-    <p class="text-justify text-xl mt-4 text-slate-600 max-w-xl">
-      It´s me, Inge Gatovsky, a Cloud Engineer with a passion for technology and
-      innovation. I´m a big fan of the cloud and all the possibilities it offers.
-      Pythonist, Linux and Docker. <br/> I´m always looking for new
-      challenges and opportunities to learn new things.
-    </p>
+  </article>
+  <article>
+    <div>
+      <h1
+        class="text-5xl text-center md:text-left lg:text-left lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
+        Inge Gatovsky
+      </h1>
+      <h2 class="text-4xl text-center md:text-left lg:text-left lg:text-5xl xl:text-6xl font-bold lg:tracking-tight xl:tracking-tighter">
+        Cloud Engineer
+      </h2>
+      <p class="text-justify text-xl mt-4 text-slate-600 max-w-xl">
+        It´s me, Inge Gatovsky, a Cloud Engineer with a passion for technology and
+        innovation. I´m a fan of the cloud and all the possibilities it offers.
+        Pythonist, Linux and Docker lover. <br/> I´m always looking for new
+        challenges and opportunities to learn new things.
+      </p>
+    </div>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
         href="mailto:&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#111;&#64;&#104;&#104;&#97;&#114;&#105;&#101;&#116;&#97;&#46;&#108;&#97;&#116;"
@@ -56,5 +58,5 @@ import { Icon } from "astro-icon/components";
         GitHub Repo
       </Link>
     </div>
-  </div>
+  </article>
 </main>
