--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -6,7 +6,7 @@ import { Icon } from "astro-icon/components";
 
 <section class="carousel-container mt-24">
   <div class="carousel-title">
-    <h3 class="text-center text-4xl md:text-5xl ">I work with this technologies</h2>
+    <h3 class="text-center text-4xl lg:text-6xl md:text-8xl ">I work with this technologies</h2>
   </div>
   <article class="carousel-track flex gap-1 md:gap-5 items-center justify-center mt-10">
     <div class="carousel-item">
