--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -1,6 +1,7 @@
 
 .container1 {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -92,16 +93,17 @@
   }
 
 
-@media screen and (max-width: 932px) {
+@media screen and (max-width: 1280px) {
   .container1 {
     height: 100vh;
-    max-width: 100vw;
+    max-width: 92vw;
   }
    
   .container-cards {
-    width: 15rem;
-    height: 15rem;
-    perspective: 1200px;
+    width: 12rem;
+    height: 12rem;
+    perspective: 1600px;
+    
    
   }
 }
