Removed text justify

--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -11,6 +11,6 @@ import Link from "./ui/link.astro";
     Redemptio qui redimit
   </p>
   <div class="flex mt-5">
-    <Link href="/blog" style="inverted">Go to my blog</Link>
+    <Link href="/contact" style="inverted">Contact me</Link>
   </div>
 </div>
