--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -43,17 +43,17 @@
 ---
 
 <section class="my-5">
-  <div class="flex flex-col content-center items-center sm:items-left mt-1 md:mt-0">
+  <div class="flex flex-col mt-1 md:mt-0">
     <h2 class="text-4xl md:text-xl lg:text-5xl font-bold lg:tracking-tight">
       Inge Gatovsky
     </h2>
     <h3 class="italic text-2xl text-zinc-900 md:text-xl lg:text-4xl xl:text-5xl font-bold lg:tracking-tight xl:tracking-tighter">
       "the best breaking production"
     </h3>
-    <p class="text-xl text-justify mt-4 text-slate-600">
+    <p class="text-xl mt-4 text-slate-600">
       Do you want to know more about me?
       I´m a Cloud Engineer with a passion for data engineering & ML.
-      Also, I write cheap love poems 🩷.
+      Also, I write cheap love poems 🩷
     </p>
   </div>
   
