--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -25,17 +25,15 @@ import { Icon } from "astro-icon/components";
   <article>
     <div>
       <h1
-        class="text-5xl text-center md:text-left lg:text-left lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
+        class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
         Inge Gatovsky
       </h1>
-      <h2 class="text-4xl text-center md:text-left lg:text-left lg:text-5xl xl:text-6xl font-bold lg:tracking-tight xl:tracking-tighter">
+      <h2 class="text-4xl lg:text-5xl xl:text-6xl font-bold lg:tracking-tight xl:tracking-tighter">
         Cloud Engineer
       </h2>
-      <p class="text-justify text-xl mt-4 text-slate-600 max-w-xl">
+      <p class="text-xl mt-4 text-slate-600 max-w-xl">
         It´s me, Inge Gatovsky, a Cloud Engineer with a passion for technology and
         innovation. I´m a fan of the cloud and all the possibilities it offers.
-        Pythonist, Linux and Docker lover. <br/> I´m always looking for new
-        challenges and opportunities to learn new things.
       </p>
     </div>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
