--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -14,8 +14,8 @@ const menuitems = [
     path: "#",
     children: [
       { title: "Projects", path: "https://www.hharieta.lat/works", target: "_blank" },
-      { title: "Hobby", path: "#", target: "_self"},
       { title: "Curriculum Vitae", path: "https://www.hharieta.lat/", target: "_blank"},
+      { title: "Hobby", path: "/404", target: "_self"},
       { title: "Social media", path: "/404", target: "_parent" },
     ],
     badge: "New"
@@ -24,6 +24,11 @@ const menuitems = [
     title: "About",
     path: "/about",
     target: "_self"
+  },
+  {
+    title: "CV",
+    path: "https://www.hharieta.lat/",
+    target: "_blank"
   },
   {
     title: "Blog",
