--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,7 +13,7 @@ import { Icon } from "astro-icon/components";
       <Fragment slot="desc"> 😻 </Fragment>
     </Sectionhead>
 
-    <div class="text-justify grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
+    <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
         <h2 class="font-medium text-2xl text-gray-800">Contact Inge Gatovsky</h2>
         <p class="text-lg leading-relaxed text-slate-500 mt-3">
