--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -14,7 +14,7 @@ const menuitems = [
     path: "#",
     children: [
       { title: "Projects", path: "https://www.hharieta.lat/works", target: "_blank" },
-      { title: "Curriculum Vitae", path: "https://www.hharieta.lat/", target: "_blank"},
+      { title: "Curriculum Vitae", path: "/experience", target: "_self"},
       { title: "Hobby", path: "/404", target: "_self"},
       { title: "Social media", path: "/404", target: "_parent" },
     ],
@@ -27,8 +27,8 @@ const menuitems = [
   },
   {
     title: "CV",
-    path: "https://www.hharieta.lat/",
-    target: "_blank"
+    path: "/experience",
+    target: "_self"
   },
   {
     title: "Blog",
