--- a/src/components/gridcourse.astro
+++ b/src/components/gridcourse.astro
@@ -6,21 +6,25 @@ interface Props {
   issuer: string;
 }
 
+import Image from 'astro/components/Image.astro';
 const { url, title, thumbnail, issuer } = Astro.props;
 ---
-<div class=" text-center content-center items-center tex-center">
+
+<div class=" flex flex-col text-center items-center p-4">
     <a href={url} target="_blank" class="decoration-inherit cursor-pointer">
-        <img
+        <Image
         src={thumbnail}
         alt={title}
-        class="rounded-lg w-full md:w-28 m-auto"
+        width={100}
+        height={100}
+        class="rounded-lg w-full md:w-28 m-4"
         loading="lazy"
         />
-        <div>
+        <div >
         <h3 
-        class="text-lg font-semibold text-gray-800 mt-2">{title}</h3>
+        class="text-lg font-semibold text-gray-800">{title}</h3>
         </div>
-        <p class="text-md ">{issuer}</p>
+        <p class="text-md">{issuer}</p>
     </a>
-    </div>
+</div>
 
