--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -69,7 +69,7 @@ const { courses } = basics;
     <h2
       class="text-4xl sm:text-lg md:text-2xl tracking-tighter"
     >
-      Courses
+    Training & Certifications
     </h2>
   </div>
   <div class="w-3/5 grid grid-cols-1 md:w-1/2 md:grid-cols-3 gap-6 ">
