About info added

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,6 +1,6 @@
 ---
 import { Picture } from "astro:assets";
-import heroImage from "assets/gatovsky.webp";
+import heroImage from "@assets/gatovsky.webp";
 import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon/components";
 ---
