--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -83,6 +83,9 @@ const makeTitle = title
       .font-mplus{
         font-family: 'M PLUS Rounded 1c', sans-serif;
       }
+      .font-handlee{
+        font-family: "Handlee", sans-serif;
+      }
     </style>
   </body>
 </html>
