--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -23,7 +23,7 @@ const { courses } = basics;
   class="w-full flex flex-col gap-10  content-center items-center justify-center px-4 py-20 sm:py-24 overflow-hidden"
 >
   <div
-    class="w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
+    class="cv-section w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
   >
     <h2
       class="text-4xl sm:text-lg md:text-2xl tracking-tighter"
@@ -36,11 +36,11 @@ const { courses } = basics;
       Here are some of the places I've worked at.
     </p>
   </div>
-  <div class="flex flex-col pointer-events-auto">
+  <div class="cv-section flex flex-col pointer-events-auto">
     {experience.map((exp) => <ExperienceCard {...exp} />)}
   </div>
   <div
-    class="w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
+    class="cv-section w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
   >
     <h2
       class="text-4xl sm:text-lg md:text-2xl tracking-tighter"
@@ -48,11 +48,11 @@ const { courses } = basics;
       Education
     </h2>
   </div>
-  <div class="flex flex-col pointer-events-auto">
+  <div class="cv-section flex flex-col pointer-events-auto">
     {education.map((edu) => <EducationCard {...edu} />)}
   </div>
   <div
-    class="w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
+    class="cv-section w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
   >
     <h2
       class="text-4xl sm:text-lg md:text-2xl tracking-tighter"
@@ -60,11 +60,11 @@ const { courses } = basics;
       Awards
     </h2>
   </div>
-  <div class="flex flex-col pointer-events-auto">
+  <div class="cv-section flex flex-col pointer-events-auto">
     {awards.map((awd) => <AwardsCard {...awd} />)}
   </div>
   <div
-    class="w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
+    class="cv-section  w-full max-w-2xl flex flex-col justify-center items-start sm:items-center gap-3"
   >
     <h2
       class="text-4xl sm:text-lg md:text-2xl tracking-tighter"
@@ -72,7 +72,7 @@ const { courses } = basics;
     Training & Certifications
     </h2>
   </div>
-  <div class="w-3/5 grid grid-cols-1 md:w-1/2 md:grid-cols-3 gap-6 ">
+  <div class="cv-section w-3/5 grid grid-cols-1 md:w-1/2 md:grid-cols-3 gap-6 ">
     {courses.map((course) => (
       <GridCourse {...course} />
     ))}
@@ -97,6 +97,19 @@ const { courses } = basics;
       GitHub Repo
     </Link>
   </div>
+  <script src="../scripts/observer.js"></script>
 </section>
 </Container>
+<style>
+  .cv-section {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.cv-section.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+</style>
 </Layout>
