Fixed div not closed

--- a/src/components/educationcard.astro
+++ b/src/components/educationcard.astro
@@ -38,6 +38,7 @@ const formattedEndDate = endDate ? formatter.format(parseDate(endDate)) : "Today
       <h4 class="text-lg sm:text-normal md:text-xl tracking-tighter">
         {area}
       </h4>
+    </div>
     <time class="text-sm text-muted-foreground text-slate-500"
       >{formattedStartDate} - {formattedEndDate}</time
     >
